@@ -8,7 +8,7 @@ VALUES ("fCBbQkAyYzI4NzUxMg","super confidential client",
   "$2a$08$vi1FbuN3p6GcI1tSxMAoeuIYL8Yw3j6A8wJthaN8ZboVnrQaTwLPq",
   "CONFIDENTIAL", 1, 
   "https://korap.ids-mannheim.de/confidential/redirect", "system",
-  "This is a test super confidential client.", 
+  "Super confidential client.", 
   "http://korap.ids-mannheim.de/confidential", CURRENT_TIMESTAMP, 1);
 
   
@@ -20,7 +20,7 @@ VALUES ("9aHsGW6QflV13ixNpez","non super confidential client",
   "$2a$08$vi1FbuN3p6GcI1tSxMAoeuIYL8Yw3j6A8wJthaN8ZboVnrQaTwLPq",
   "CONFIDENTIAL", 0,
   "https://third.party.com/confidential/redirect", "system",
-  "This is a test nonsuper confidential client.",
+  "Nonsuper confidential client.",
   "http://third.party.com/confidential", CURRENT_TIMESTAMP,1);
 
 INSERT INTO oauth2_client(id,name,secret,type,super,
@@ -29,7 +29,7 @@ INSERT INTO oauth2_client(id,name,secret,type,super,
 VALUES ("52atrL0ajex_3_5imd9Mgw","confidential client 2",
   "$2a$08$vi1FbuN3p6GcI1tSxMAoeuIYL8Yw3j6A8wJthaN8ZboVnrQaTwLPq",
   "CONFIDENTIAL", 0,"system",
-  "This is a test nonsuper confidential client.",
+  "Nonsuper confidential client plugin without redirect URI",
   "http://example.client.de", CURRENT_TIMESTAMP, 1,'{"key":"value"}');
 
 INSERT INTO oauth2_client(id,name,secret,type,super,
@@ -38,7 +38,7 @@ INSERT INTO oauth2_client(id,name,secret,type,super,
 VALUES ("8bIDtZnH6NvRkW2Fq","public client plugin with redirect uri",
   null, "PUBLIC", 0,
   "https://third.party.client.com/redirect","system",
-  "A public client that is a plugin with registered redirect URI",
+  "Public client plugin with a registered redirect URI",
   "http://third.party.client.com", CURRENT_TIMESTAMP,1,'{"key":"value"}');
 
   
@@ -46,7 +46,7 @@ INSERT INTO oauth2_client(id,name,secret,type,super,
   registered_by, description, url, registration_date, 
   is_permitted) 
 VALUES ("nW5qM63Rb2a7KdT9L","test public client",null,
-  "PUBLIC", 0, "without redirect uri",
+  "PUBLIC", 0, "Public client without redirect uri",
   "system", "http://korap.ids-mannheim.de/public", 
   CURRENT_TIMESTAMP, 1);
   
